<resources>
    <string name="app_name">AppTiempo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="crearRegistro">Crear Registro</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetirContrasena">Repetir Contraseña</string>
    <string name="errorContrasena">Ha habido un error en tu contraseña</string>
    <string name="entradaCorrecta">Ha entrado correctamente</string>
    <string name="registroCorrecto">Se ha registrado correctamente</string>
    <string name="registroIncorrectoCamposVacios">No puede dejar ningun campo vacio</string>
    <string name="registroContraseñaNoCoincide">No coinciden las contraseñas</string>
    <string name="abrirMapa">Mapa</string>
    <string name="pantallaPrincipal">Pantalla Principal</string>
    <string name="pantallaLogin">Login</string>
    <string name="pantallaRegistro">Registro</string>
    <string name="pantallaMapa">Maps</string>
    <string name="pantallaMain">App Tiempo</string>
    <string name="botonSiguiente">Siguiente</string>
    <string name="textoPortada">Aplicacion diseñada para consultar la condicion actual del aire\n\n
        Diseñada en Elorrieta:\n
        Asier Hernández\n
        Iker Monzon\n
        Iñigo Campos
    </string>
    <string name="abrirFoto">Foto</string>
    <string name="abrirCompartir">Compartir</string>
    <string name="btnCamara">Camara</string>
    <string name="toastPermisoDenegado">Permiso Denegado</string>
    <string name="toastNoVolverAPreguntar">No volver a preguntar</string>
    <string name="abriendoCamara">Abriendo la camara</string>
    <string name="permisoNecesario">Permiso Necesario</string>
    <string name="permisoNecesarioCamaraDescripcion">Este permiso se necesita para poder sacar fotos con su dispositivo</string>
    <string name="permisoNecesarioAlmacenamientoDescripcion">Este permiso se necesita para guardar archivos en su dispositivo</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="error">Error</string>
    <string name="internetError">Error de conexion</string>
    <string name="permisoAceptado">Permiso Aceptado</string>
    <string name="permisoDenegado">Permiso Denegado</string>
    <string name="abrirPermisos">Permisos</string>
    <string name="Provincias">Provincias</string>
    <string name="Municipios">Municipios</string>
    <string name="Bizkaia">Bizkaia</string>
    <string name="Araba">Araba</string>
    <string name="Gipuzkoa">Gipuzkoa</string>
    <string name="title_activity_maps_consulta">MapsActivityConsulta</string>
    <string name="estaciones">Estaciones</string>
    <string name="estacionesDatos">Estaciones Datos</string>
    <string name="top5">Top 5</string>
    <string name="pueblosTotalBizkaia">Pueblos que tiene Bizkaia:</string>
    <string name="pueblosTotalGipuzkoa">Pueblos que tiene Gipuzkoa:</string>
    <string name="pueblosTotalAraba">Pueblos que tiene Araba:</string>
    <string name="permisosCamaraAceptado">Permiso de camara aceptada</string>
    <string name="permisosCamaraDenegado">Permiso de camara denegada</string>
    <string name="permisosLocalizacionCoarseAceptada">Localizacion coarse aceptada</string>
    <string name="permisosLocalizacionCoarseDenegada">Localizacion coarse denegada</string>
    <string name="permisosLocalizacionFineAceptada">Localizacion fine aceptada</string>
    <string name="permisosLocalizacionFineDenegada">Localizacion fine denegada</string>
    <string name="permisosEscrituraArchivosAceptada">Escritura de archivos activada</string>
    <string name="permisosEscrituraArchivosDenegada">Escritura de archivos denegada</string>
    <string name="permisosLecturaArchivosAceptada">Lectura de archivos activada</string>
    <string name="permisosLecturaArchivosDenegada">Lectura de archivos denegada</string>
    <string name="acercaDe">Acerca de nosotros</string>
    <string name="nombreApp">Nombre de la App:</string>
    <string name="versionApp">Version de la App:</string>
    <string name="appVersion">1,0</string>
    <string name="fechaVersionApp">Fecha de la versión:</string>
    <string name="correoContacto">Correo:"</string>
    <string name="dondeEncontrarnos">Donde encontrarnos:</string>
</resources>