<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6DED6"
    tools:context=".PantallaPrincipal">

    <LinearLayout
        android:id="@+id/linearLayoutt"
        android:layout_width="399dp"
        android:layout_height="298dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588">

        <Button
            android:id="@+id/btnAbrirFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirFoto"
            android:text="@string/abrirFoto" />

        <Button
            android:id="@+id/btnProvincias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirProvincias"
            android:text="@string/Provincias" />

        <Button
            android:id="@+id/btnAbrirTop5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirTop5"
            android:text="@string/top5" />

        <Button
            android:id="@+id/btnAcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="acercaDe"
            android:text="@string/acercaDe" />

        <Button
            android:id="@+id/btnAbrirPermisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="activarPermisos"
            android:text="@string/abrirPermisos" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtPantallaPrincipal"
        android:layout_width="324dp"
        android:layout_height="150dp"
        android:text="@string/pantallaPrincipal"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />
</androidx.constraintlayout.widget.ConstraintLayout>