<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6DED6"
    tools:context=".PantallaTop5">

    <TextView
        android:id="@+id/txtPantallaTop5"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:text="@string/top5"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <LinearLayout
        android:id="@+id/linearLayoutt"
        android:layout_width="393dp"
        android:layout_height="324dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewProvincias2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Provincias" />

        <TextView
            android:id="@+id/textViewBizkaia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pueblosTotalBizkaia" />

        <TextView
            android:id="@+id/textViewGipuzkoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pueblosTotalGipuzkoa" />

        <TextView
            android:id="@+id/textViewAraba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pueblosTotalAraba" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="******************" />

        <TextView
            android:id="@+id/textViewMunicipios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Municipios" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>